# bookstore

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: build.yml  github-actions-demo.yml  vercel-deploy.yml  workflow-pr.yaml
bookstore/: settings.py  urls.py
order/: factories.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/migrations/: 0001_initial.py
product/models/: category.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_viewset/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
