[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["William Wsilva <williamreis.wsilva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
factory-boy = "^3.3.0"
django = "^4.2.6"
djangorestframework = "^3.14.0"
django-rest-framework = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
