[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["William Wsilva <williamreis.wsilva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.2"
factory-boy = "^3.3.0"
django = "^4.2.6"
djangorestframework = "^3.14.0"
django-rest-framework = "^0.1.0"
pytest-django = "^4.5.2"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.2.0"
psycopg2-binary = "^2.9.2"
autopep8 = "^1.6.0"
isort = "^5.10.1"
whitenoise = "^6.6.0"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"